link and ganplus introduce

--- a/resources/assets/sass/bootstrap.scss
+++ b/resources/assets/sass/bootstrap.scss
@@ -1,5 +1,5 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 @import "modules/me.scss";
-@import "modules/home.scss";
+@import "modules/ganplus.scss";
 @import "modules/admin.scss";
