--- a/resources/assets/sass/modules/ganplus.scss
+++ b/resources/assets/sass/modules/ganplus.scss
@@ -16,6 +16,8 @@
         .panel {
             .fa {
                 display: block;
+                margin-top: 10px;
+                margin-bottom: 15px;
                 font-size: 50px;
                 color: #777;
             }
