--- a/resources/assets/sass/bootstrap.scss
+++ b/resources/assets/sass/bootstrap.scss
@@ -1,4 +1,6 @@
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+/**
+ *
+ */
 
-@import "modules/me.scss";
-@import "modules/admin.scss";
+@import "variable.scss";
+@import "loader.scss";
